--- a/css/obras.css
+++ b/css/obras.css
@@ -1,20 +1,28 @@
-.title {
-    padding: 100px;
-    background-image: url(../img/paintings/michelangelo-criacao-adao.jpg);
-    background-attachment: fixed;
-    background-position: top;
-    background-repeat: no-repeat;
-    background-size: 100%;
-    width: 100%;
-    height: 200px;
+main {
+    padding-top: 86px;
 }
 
-.text {
-    height: 80%;
+.title {
+    padding: 100px;
+    background-image: url(../img/paintings/gogh-amendoeira-em-flor.jpg);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: top;
+    height: 150px;
+    overflow: hidden;
+}
+
+.text h2{
+    font-size: 20px;
+    opacity: 0.7;
+    color: #fff;
+    padding: 30px;
+    background-color: #222;
 }
 
 .periodos-artisticos {
     margin: 50px 0;
+    overflow: hidden;
     
     
 }
@@ -41,7 +49,7 @@
     width: 100%;
     height: 200px;
     object-fit: cover;
-    object-position: top;
+    object-position: center;
     
 }
 
