--- a/css/artistas.css
+++ b/css/artistas.css
@@ -6,8 +6,9 @@ main {
 
 .title {
     padding: 100px;
-    background-image: url(../img/paintings/munch-the-scream-corte.jpg);
+    background-image: url(../img/paintings/gogh-auto-retrato2.jpg);
     background-attachment: fixed;
+    background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     height: 150px;
