--- a/css/obras.css
+++ b/css/obras.css
@@ -6,9 +6,10 @@ main {
 
 .title {
     padding: 100px;
-    background-image: url(../img/paintings/munch-the-scream-corte.jpg);
+    background-image: url(../img/paintings/michelangelo-criacao-adao.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
+    background-size: cover;
     background-position: center;
     height: 150px;
     overflow: hidden;
@@ -33,6 +34,7 @@ main {
 
 .busca {
     border: 1px solid #daa520;
+    border-radius: 18px 0 0 18px;
     width: 400px;
     padding: 10px;
     font-size: 14px;
@@ -45,6 +47,7 @@ main {
     padding: 8px;
     background-color: #daa520;
     border: none;
+    border-radius: 0 18px 18px 0;
     cursor: pointer;
 }
 .busca-botao img {
@@ -63,8 +66,13 @@ main {
     flex-direction: column;
 }
 
+.periodos-artisticos hr {
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+
 .mov-card {
-    margin: 30px 0;
+    margin-bottom: 30px;
     list-style: none;
     z-index: -10;
     
