--- a/css/inicio.css
+++ b/css/inicio.css
@@ -5,7 +5,7 @@
 }
 
 .imagens {
-    margin-top: 90px;
+    margin-top: 86px;
     width: 100%;
     height: 550px;
     position: relative;
@@ -96,10 +96,9 @@
     font-weight: bold;
     display: inline-block;
     color: #f7f7eb;
-    background-color: #DAA520;
+    background-color: #0387ca;
     font-size: 16px;
     text-decoration: none;
-    border: 1px solid #f7f7eb;
     border-radius: 50px;
     width: 200px;
     padding: 15px;
@@ -152,7 +151,7 @@
     position: absolute;
     width: 100%;
     bottom: 0;
-    padding: 10px 0px 20px;
+    padding: 8px 0px 30px;
     color: white;
     font-size: 10px;
     text-align: center;
