--- a/css/global.css
+++ b/css/global.css
@@ -20,7 +20,7 @@ h2 {
 }
 
 p {
-    font-size: 16px; /* PARA CORPO DO TEXTO*/
+    font-size: 17px; /* PARA CORPO DO TEXTO*/
 }
 
 .container {
@@ -158,7 +158,7 @@ header {
 }
 
 .sub-menu a {
-    color: #DAA520;
+    color: #D2691E;
 }
 
 .menu-mini:hover > .sub-menu {
@@ -278,7 +278,7 @@ header {
 }
 
 .modal img {
-    width: 25%;
+    width: 75px;
     margin: 15px 0;
 }
 
@@ -311,13 +311,12 @@ header {
     width: 100%;
     border: none;
     outline: none;
-    border-radius: 3px;
     font-size: 14px;
 }
 
 .border-input {
     border-bottom: 1px solid rgb(70, 70, 70);
-    margin: 13px 0;
+    margin: 5px 0 18px;
     width: 100%;
 }
 
@@ -335,7 +334,44 @@ header {
     cursor: pointer;
 }
 
+.enter:hover {
+    background-color: rgb(243, 185, 40);
+}
+
 .enter.face {
     background-color: #138af0;
 }
+
+.enter.face:hover{
+    background-color: #049eeb;
+}
+
+/*PADRÕES*/
+
+.botao-principal {
+    margin: 40px auto;
+    text-align: center;
+}
+
+.botao-principal a{
+    font-weight: bold;
+    display: inline-block;
+    color: #f7f7eb;
+    background-color: #0387ca;
+    font-size: 16px;
+    text-decoration: none;
+    border-radius: 50px;
+    width: 200px;
+    padding: 15px;
+    transition: all 0.3s;
+}
+
+
+.botao-principal a:hover {
+    -moz-transform: scale(1.1);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+    background-color: #049eeb;
+}
+
 
