--- a/css/inicio.css
+++ b/css/inicio.css
@@ -77,6 +77,7 @@
     color: #363636;
 }
 
+
 @media (max-width: 1140px) {
     .texto-conteudo h1 {
         font-size: 30px;
@@ -99,6 +100,7 @@
 .botao-quiz {
     margin: 0px 50px;
     background-color: #DAA520;
+    box-shadow: 5px 5px 12px grey;
     border-radius: 50%;
     width: 100px;
     height: 100px;
@@ -214,5 +216,4 @@
 .botao-art:hover {
     color: rgb(241, 124, 40);
 }
-
 
