--- a/css/obras.css
+++ b/css/obras.css
@@ -6,11 +6,11 @@ main {
 
 .title {
     padding: 100px;
-    background-image: url(../img/paintings/michelangelo-criacao-adao.jpg);
+    background-image: url(../img/paintings/monet-impressao.jpg);
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
-    background-position: center;
+    background-position: left;
     height: 150px;
     overflow: hidden;
 }
@@ -21,6 +21,9 @@ main {
     color: #fff;
     padding: 30px;
     background-color: #222;
+    border-radius: 5px;
+    width: 245px;
+    margin: 55px 30px;
 }
 
 /*BUSCA*/
