--- a/css/inicio.css
+++ b/css/inicio.css
@@ -61,6 +61,7 @@
 .moldura {
     width: 100%;
     height: 500px;
+    box-shadow: 2px 5px 10px rgb(112, 112, 112);
 }
 
 .texto-conteudo {
@@ -94,20 +95,18 @@
     .apresentacao .flex {
         justify-content: space-between;
     }
-
 }
 
 .botao-quiz {
     margin: 0px 50px;
     background-color: #DAA520;
-    box-shadow: 5px 5px 12px grey;
+    box-shadow: 2px 2px 10px grey;
     border-radius: 50%;
     width: 100px;
     height: 100px;
     padding: 15px;
     text-align: center;
     cursor: pointer;
-    transition: all 0.3s;
 }
 
 .botao-quiz a{
@@ -121,6 +120,7 @@
     transform: scale(1.1);
     background-color: rgb(243, 185, 40);
 }
+
 
 /*QUIZ*/
 
@@ -166,9 +166,15 @@
     height: 50%;
     overflow: hidden;
     position: relative;
-    /* border: 7px double gold; */
+    /* border: 7px double #c78e3a; */
     border-radius: 50%;
     background-color: #000;
+    box-shadow: 2px 5px 10px rgb(112, 112, 112);
+    cursor: pointer;
+}
+
+.maiores_obras .art-foto{
+    box-shadow: 2px 4px 10px rgb(76, 59, 15);
 }
   
 .art-foto img {
