--- a/css/global.css
+++ b/css/global.css
@@ -335,10 +335,16 @@ header {
     margin-top: 7px;
     cursor: pointer;
     font-weight: bold;
+    font-size: 25px;
     color: #DAA520;
-    background-color: rgb(250, 241, 219);
+    background-color: transparent;
     border: none;
     outline: none;
+    transition: 0.5s;
+}
+
+.fechar:hover {
+    color: rgb(131, 69, 11)
 }
 
 .input {
@@ -368,6 +374,7 @@ header {
     font-size: 14px;
     outline: none;
     cursor: pointer;
+    transition: 0.3s;
 }
 
 .enter:hover {
