--- a/css/global.css
+++ b/css/global.css
@@ -331,12 +331,12 @@ header {
     width: 30px;
     height: 30px;
     border-radius: 50%;
-    margin-right: 7px;
-    margin-top: 7px;
+    margin-right: 3px;
+    margin-top: 3px;
     cursor: pointer;
     font-weight: bold;
-    font-size: 25px;
-    color: #DAA520;
+    font-size: 35px;
+    color: #c8c8c8;
     background-color: transparent;
     border: none;
     outline: none;
@@ -344,7 +344,7 @@ header {
 }
 
 .fechar:hover {
-    color: rgb(131, 69, 11)
+    color: #da3620;
 }
 
 .input {
