--- a/css/global.css
+++ b/css/global.css
@@ -199,6 +199,25 @@ header {
     display: flex;
 }
 
+/* FRASE FINAL */
+
+.frase {
+    background-color: #daa520;
+    color: #f7f7eb;
+    padding: 60px 0;
+    text-align: center;
+}
+
+.frase q {
+    font-size: 20px;
+}
+
+.frase span {
+    font-size: 16px;
+    display: block;
+    padding-top: 15px;
+}
+
 
 /*RODAPÉ*/
 .rodape {
