--- a/css/inicio.css
+++ b/css/inicio.css
@@ -1,3 +1,4 @@
+
 /*BANNER*/
 
 .galeria {
@@ -49,7 +50,7 @@
 /*APRESENTAÇÃO*/
 
 .apresentacao {
-    height: 520px;
+    min-height: 500px;
     padding: 80px 0;
     position: relative;
 }
@@ -107,11 +108,7 @@
     padding: 15px;
     text-align: center;
     cursor: pointer;
-}
-
-.botao-quiz a{
-    text-decoration: none;
-    color: #f7f7eb;   
+    color: #f7f7eb;
 }
 
 .botao-quiz:hover {
@@ -124,7 +121,50 @@
 
 /*QUIZ*/
 
+#title_quiz {
+    display: none;
+}
 
+.titulo-quiz {
+    font-size: 22px;
+    text-transform: uppercase;
+    color: #DAA520;
+    margin: 20px;
+}
+
+.combo-questao {
+    display: none;
+}
+
+.pergunta {
+    text-align: center;
+    margin: 20px 0;
+    color: rgb(65, 65, 65);
+    background-color: #efefd0;
+    padding: 5px;
+}
+
+.opcao {
+    margin: 20px;
+    padding: 20px;
+    border: 2px solid #daa520;
+    width: 240px;
+    box-sizing: border-box;
+    cursor: pointer;
+    transition: all 0.5s;
+}
+
+.opcao img {
+    width: 195px;
+    height: 190px;
+    object-fit: cover;
+}
+
+.opcao:hover {
+    background-color: #daa520;
+    color: #fff;
+    transform: scale(1.1);
+}
 
 
 /*ARTISTAS E OBRAS*/
