--- a/Projeto-site/css/global.css
+++ b/Projeto-site/css/global.css
@@ -85,7 +85,7 @@ header {
 
 .menu {
     width: 100%;
-    height: 86px;
+    height: 87px;
     background-color: #f7f7ebee;
     text-align: center;
     position: fixed;
@@ -130,11 +130,11 @@ header {
 
 .navegacao a:hover{
     transition: 0.2s linear;
-    border-bottom: 3px solid #DAA520;
+    border-bottom: 4px solid #fbc745;
 }
 
 .page_atual{
-    border-bottom: 3px solid #DAA520;
+    border-bottom: 4px solid #fbc745;
 }
 
 .autenticacao {
@@ -428,13 +428,17 @@ header {
     background-color: #049eeb;
 }
 
-.error li{
+.error {
     background-color: #FFE4E1;
     color: #B22222;
     border-radius: 5px;
-    padding: 3px;
-    margin: 3px;
+    margin-bottom: 8px;
     font-size: 15px;
+}
+
+.cadastro-sucesso {
+    display: none;
+    color: #c59721;
 }
 
 
