--- a/Projeto-site/css/inicio.css
+++ b/Projeto-site/css/inicio.css
@@ -239,7 +239,6 @@
     height: 50%;
     overflow: hidden;
     position: relative;
-    /* border: 7px double #c78e3a; */
     border-radius: 50%;
     background-color: #000;
     box-shadow: 2px 5px 10px rgb(112, 112, 112);
@@ -255,7 +254,7 @@
     height: 210px;
     object-fit: cover;
     object-position: top;
-    transition: all 0.5s; /*delay no zoom*/
+    transition: all 0.5s; 
 }
   
 .art-foto img:hover {
