--- a/Projeto-site/css/conteudo.css
+++ b/Projeto-site/css/conteudo.css
@@ -16,6 +16,7 @@
     border-radius: 20px;
     outline: none;
     border: 2px solid #daa520;
+    margin-right: 40px;
 }
 
 .links-minimizado img {
